1.03	2011-0?-??
	- recommenders
          - new rating predictor BiasedMatrixFactorizationMAE, which is BMF
            optimized for MAE instead of RMSE
	- command-line tools
          - write out predictions every N iterations with --prediction-file=F
            and --find-iter=N (bug reported by Alejandro Bellogin)
	- evaluation
        - data structures
          - add interfaces IBooleanMatrix and IPosOnlyFeedback
          - make PosOnlyFeedback generic to allow different backends
          - add SparseBooleanMatrixBinarySearch and SparseBooleanMatrixStatic
          - IMatrix<T> interface: add Transpose() method
          - SparseBooleanMatrix: remove Rows() method (not necessary)
          - Matrix<T>: perform bounds check only when DEBUG is set;
            faster GetRow()/SetRow(); generic return types
          - MatrixUtils: remove ContainsNaN()
          - VectorUtils: add L1Norm()
	- documentation
          - some API doc improvements

1.02	2011-05-24
	- recommenders
          - BPR_Linear: less verbose output
          - BPRMF: fix loading/saving of models
          - BiasedMatrixFactorization: simplify a bit
          - SlopeOne: move computation of rating average to Train()
	  - BiPolarSlopeOne: fix loading/saving of models
          - UserItemBias: set default values for reg_u and reg_i
	- command-line tools
	  - item prediction: fix null pointer exception when no --test-file is
            given
          - rating prediction: save model file in all cases when requested
        - documentation
          - fix Doxygen API doc (wrong path)
          - Doxygen: do not build LaTeX doc; add main page
          - remove <inheritdoc/> XML tags - currently not supported by any
            tool we use
          - drop ImmDoc.NET support

1.01	2011-05-19
        - API changes
          - add interface IEntityMapping
          - IRatings: add CountByUser and CountByItem
        - recommenders
          - make ItemRecommender and RatingPredictor clonable