@@ -38,9 +38,11 @@
      { method => 'UserKNNPearson',            hp => 'k=60 shrinkage=100 reg_u=12 reg_i=1' ,                                rmse => '0.930', mae => '0.729', nmae => '0.1823' }
      { method => 'ItemKNNCosine'              hp => 'k=40 reg_u=12 reg_i=1'                                                rmse => '0.924', mae => '0.727', nmae => '0.1817' }
      { method => 'ItemKNNPearson',            hp => 'k=40 shrinkage=200 reg_u=12 reg_i=1',                                 rmse => '0.915', mae => '0.717', nmae => '0.1792' }
-     { method => 'BiasedMatrixFactorization', hp => 'num_factors=10 bias_reg=0.007 reg_u=0.1 reg_i=0.12 learn_rate=0.05 num_iter=100 bold_driver=true', rmse => '0.91655', mae => '0.72306', nmae => '0.18077' }
-     { method => 'BiasedMatrixFactorization', hp => 'num_factors=40 bias_reg=0.005 reg_u=0.1 reg_i=0.1 learn_rate=0.05 num_iter=250 bold_driver=true', rmse => '0.91268', mae => '0.72109', nmae => '0.18027' }
-     { method => 'BiasedMatrixFactorization', hp => 'num_factors=80 bias_reg=0.005 reg_u=0.1 reg_i=0.1 learn_rate=0.05 num_iter=250 bold_driver=true', rmse => '0.91151', mae => '0.72058', nmae => '0.18014' }
+     { method => 'BiasedMatrixFactorization', hp => 'num_factors=5 bias_reg=0.005 reg_u=0.1 reg_i=0.1 learn_rate=0.05 num_iter=500 bold_driver=true', rmse => '0.91622', mae => '0.72242', nmae => '0.18061' }
+     { method => 'BiasedMatrixFactorization', hp => 'num_factors=10 bias_reg=0.007 reg_u=0.1 reg_i=0.12 learn_rate=0.07 num_iter=500 bold_driver=true', rmse => '0.91588', mae => '0.72271', nmae => '0.18068' }
+     { method => 'BiasedMatrixFactorization', hp => 'num_factors=40 bias_reg=0.005 reg_u=0.1 reg_i=0.1 learn_rate=0.05 num_iter=500 bold_driver=true', rmse => '0.91242', mae => '0.72119', nmae => '0.1803' }
+     { method => 'BiasedMatrixFactorization', hp => 'num_factors=80 bias_reg=0.005 reg_u=0.1 reg_i=0.1 learn_rate=0.05 num_iter=500 bold_driver=true', rmse => '0.91121', mae => '0.72072', nmae => '0.18018' }
+     { method => 'BiasedMatrixFactorization', hp => 'num_factors=160 bias_reg=0.005 reg_u=0.1 reg_i=0.1 learn_rate=0.05 num_iter=500 bold_driver=true', rmse => '0.91074', mae => '0.72047', nmae => '0.18012' }
    ]
    # Flixster, 5-fold CV with --random-seed=1
    flixster = [
